re-arranged launch dialog and added default option, added ability to specify multiple jvms and set default for launching test app. Did work to try get java web start working correctly. Still can't launch a process from within web start. Fixed build script to make building less manual.